# myowntexteditor

./: .gitignore  CMakeLists.txt  README.md  dwerb.c
